--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "tai-xiu-prediction-api",
+  "name": "taixiu-ai-api",
   "version": "1.0.0",
-  "description": "API server for predicting TaiXiu outcomes",
+  "description": "API server for predicting TaiXiu outcomes with statistical and AI models.",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.19.2",
+    "ml-logistic-regression": "^2.1.0",
     "node-fetch": "^2.7.0"
   },
-  "author": "Your Name",
+  "author": "Tele@Idol_VanNhat",
   "license": "ISC"
 }
